--- a/nasa.html
+++ b/nasa.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-    
+
     <div class="navbar">
         <div class="explore">
             <a href="Explore" class="anchor">Explore</a>
-            <img src="C:\Users\user\Downloads\chevron-down.svg" >
             <input type="search" placeholder="Search">
         </div>
         <div class="im">
@@ -30,7 +29,9 @@
         <h1>FOR THE BENEFITS OF <br> ALL</h1>
         <p class="explain">NASA investigates the unknown in the air and space,ninnovates for the benefit of <br>
             humanity, and inspires the world through discovery.</p>
-        <button class="mission">NASA mission</button>
+        <div class="ab">
+            <button class="mission">NASA mission</button>
+        </div>
         <div class="line">
             <p>___________________________________</p>
             <p>___________________________________</p>
@@ -43,9 +44,9 @@
                 NEO Surveyor</p>
             <p>COSMIC WONDERS <br>
                 Nancy Grace Roman Space Telescope</p>
-
+                <div class="inner-div"><img src="C:\Users\user\Downloads\image (1).png">
+                <img src="C:\Users\user\Downloads\pause-circle (1).png"></div>
         </div>
-
     </div>
 </body>
 
