--- a/nasa.html
+++ b/nasa.html
@@ -26,11 +26,14 @@
         </div>
     </div>
     <div class="main">
-        <h1>FOR THE BENEFITS OF <br> ALL</h1>
+        <h1 class="hd">FOR THE BENEFITS OF <br> ALL</h1>
         <p class="explain">NASA investigates the unknown in the air and space,ninnovates for the benefit of <br>
             humanity, and inspires the world through discovery.</p>
         <div class="ab">
             <button class="mission">NASA mission</button>
+        </div>
+        <div class="sideim">
+            i
         </div>
         <div class="line">
             <p>___________________________________</p>
